# finz

./: README.md  finz.cabal  finz.sublime-project  finz.sublime-workspace  hie.yaml  stack.yaml
src/: Finz.hs  Main.hs
src/Finance/: Base.hs  Bonds.hs  Economics.hs  Statements.hs
src/Finance/Utilities/: Numeric.hs
src/Finance/Utilities/Numeric/: Optima.hs
src/Finz/: Statements.hs
tests/: tests.hs
utilities/: README.md  stack.yaml  utilities.cabal
utilities/src/Numeric/: Optima.hs  Utils.hs
utilities/tests/: tests.hs
