name:                 finz
version:              0.1.0.0
-- synopsis:
-- description:
homepage:             https://github.com/n-kishaloy/finz#readme
license:              BSD3
license-file:         LICENSE
author:               Author name here
maintainer:           example@example.com
copyright:            2020 Author name here
category:             Web
build-type:           Simple
cabal-version:        >=1.10
extra-source-files:   README.md

executable finz
  hs-source-dirs:       src
  ghc-options:          -O -Wall -fwarn-tabs 
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                  ,     containers  
                  ,     time
                  ,     vector
                  ,     finz
                  ,     deepseq
                  ,     utilz
                  ,     lens
                  ,     hashable
                  ,     unordered-containers

library
    exposed-modules:    Finz, Finz.Statements
    ghc-options:        -O -Wall -fwarn-tabs 
    build-depends:      base >= 4.7 && < 5
                  ,     containers
                  ,     time
                  ,     hspec
                  ,     QuickCheck
                  ,     vector
                  ,     deepseq
                  ,     utilz
                  ,     lens
                  ,     hashable
                  ,     unordered-containers
                  ,     bytestring
    hs-source-dirs:     src 
    default-language:   Haskell2010

test-suite tests
    ghc-options:        -O -Wall -fno-warn-orphans 
    type:               exitcode-stdio-1.0
    main-is:            tests.hs 
    hs-source-dirs:     tests 
    build-depends:      base >= 4.7 && < 5
                    ,   containers
                    ,   hspec
                    ,   QuickCheck
                    ,   time
                    ,   finz
                    ,   utilz
                    ,   vector
                    ,   deepseq
                    ,   hashable
                    ,   lens
                    ,   unordered-containers
                    ,   bytestring
    default-language:   Haskell2010

