name:                 finz
version:              0.1.0.0
-- synopsis:
description:          Please see the README on GitHub at <https://github.com/n-kishaloy/finz#readme>
homepage:             https://github.com/n-kishaloy/finz#readme
license:              MIT
license-file:         LICENSE
author:               Kishaloy Neogi
maintainer:           nkishaloy@yahoo.com
copyright:            2020 Kishaloy Neogi
category:             Finance
build-type:           Simple
cabal-version:        >=1.10
extra-source-files:   README.md

library
    exposed-modules:    Finance.Base
                  ,     Finance.Statements
                  ,     Finance.Bonds
                  ,     Finance.Economics
    ghc-options:        -O -Wall -fwarn-tabs 
    build-depends:      base >= 4.7 && < 5
                  ,     containers
                  ,     time
                  ,     vector
                  ,     vector-algorithms
                  ,     deepseq
                  ,     lens
                  ,     hashable
                  ,     unordered-containers
                  ,     text
                  ,     aeson
                  ,     scientific
                  ,     statistics
                  ,     approx
                  ,     utilities

    hs-source-dirs:     src 
    default-language:   Haskell2010

test-suite tests
    ghc-options:        -O -Wall -fno-warn-orphans 
    type:               exitcode-stdio-1.0
    main-is:            tests.hs 
    hs-source-dirs:     tests 
    build-depends:      base >= 4.7 && < 5
                    ,   containers
                    ,   time
                    ,   finz
                    ,   vector
                    ,   vector-algorithms
                    ,   deepseq
                    ,   hashable
                    ,   lens
                    ,   unordered-containers
                    ,   text
                    ,   aeson
                    ,   scientific
                    ,   statistics
                    ,   approx
                    ,   utilities

    default-language:   Haskell2010

