name:                 utilities
version:              0.1.0.0
-- synopsis:
description:          Please see the README on GitHub at <https://github.com/n-kishaloy/finz/utilities#readme>
homepage:             https://github.com/n-kishaloy/finz/utilities#readme
license:              MIT
license-file:         LICENSE
author:               Kishaloy Neogi
maintainer:           nkishaloy@yahoo.com
copyright:            2020 Kishaloy Neogi
category:             Finance
build-type:           Simple
cabal-version:        >=1.10
extra-source-files:   README.md

-- executable finz
--   hs-source-dirs:       src
--   ghc-options:          -O -Wall -fwarn-tabs 
--   main-is:              Main.hs
--   default-language:     Haskell2010
--   build-depends:        base >= 4.7 && < 5
--                   ,     vector
--                   ,     deepseq
--                   ,     scientific
--                   ,     statistics
--                   ,     approx
--                   ,     utilities

library
    exposed-modules:    Numeric.Utils
                  ,     Numeric.Optima
    ghc-options:        -O -Wall -fwarn-tabs 
    build-depends:      base >= 4.7 && < 5
                  ,     hspec
                  ,     QuickCheck
                  ,     vector
                  ,     deepseq
                  ,     scientific
                  ,     statistics
                  ,     approx

    hs-source-dirs:     src 
    default-language:   Haskell2010

test-suite tests
    ghc-options:        -O -Wall -fno-warn-orphans 
    type:               exitcode-stdio-1.0
    main-is:            tests.hs 
    hs-source-dirs:     tests 
    build-depends:      base >= 4.7 && < 5
                    ,   hspec
                    ,   QuickCheck
                    ,   vector
                    ,   deepseq
                    ,   scientific
                    ,   statistics
                    ,   approx
                    ,   utilities

    default-language:   Haskell2010

